# MCModpackManager

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
.config/: hakari.toml
mcmpmgr/: Cargo.toml
mcmpmgr/src/: file_merge.rs  file_meta.rs  lib.rs  main.rs  mod_meta.rs  modpack.rs  profiles.rs  resolver.rs
mcmpmgr/src/providers/: mod.rs  modrinth.rs
mmm/: Cargo.toml
mmm/src/: main.rs
src/: main.rs  mod_meta.rs  modpack.rs  resolver.rs
src/providers/: mod.rs  modrinth.rs
