[package]
name = "mcmpmgr"
authors = ["Warren Hood <nullbyte001@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
git2 = "0.19.0"
home = "0.5.9"
pathdiff = "0.2.1"
reqwest = { version = "0.12.5", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.207", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
tempfile = "3.12.0"
tokio = { version = "1.39.2", features = ["full"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
